Update base project with plain HTML/JS, React, and dev environments

--- a/package.json
+++ b/package.json
@@ -1,22 +1,67 @@
 {
   "name": "DefaultProject",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Default Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "api": "nodemon ./api/index.js",
+    "clean": "rimraf dist/*",
+    "dev": "nodemon ./dev/dev.js",
+    "eslint": "run-p plain:eslint react:eslint",
+    "plain": "run-p plain:watch plain:serve",
+    "plain:api": "run-p plain api",
+    "plain:build": "run-s clean plain:build:*",
+    "plain:build:css": "postcss --use autoprefixer -o dist/css/style.css plain/css/*.css",
+    "plain:build:html": "cp -a plain/html/. dist",
+    "plain:build:js": "browserify -e plain/js/index.js -o dist/js/bundle.js -d",
+    "plain:clean": "rimraf dist/{css/*,js/*,static/*,index.html}",
+    "plain:eslint": "eslint --env browser plain",
+    "plain:watch": "run-p plain:build:* && run-p plain:watch:*",
+    "plain:watch:css": "onchange \"plain/css\" -- run-s plain:build:css",
+    "plain:watch:html": "onchange \"plain/html\" -- run-s plain:build:html",
+    "plain:watch:js": "watchify -e plain/js/index.js -o dist/js/bundle.js -d",
+    "plain:serve": "browser-sync start --server 'dist' --files 'dist' --open local --browser 'google chrome' --tunnel",
+    "react": "run-s react:watch",
+    "react:build": "poi build",
+    "react:clean": "rimraf dist/{react/*}",
+    "react:watch": "poi",
+    "react:eslint": "eslint --env browser react",
+    "test": "jest --colors",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "Alex Bonine",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.6.5",
-    "browserify": "^9.0.8",
-    "gulp": "^3.8.11",
-    "gulp-jasmine": "^2.0.1",
-    "gulp-sass": "^1.3.3",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.4",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.1.2"
+    "autoprefixer": "^8.0.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-plugin-react-require": "^3.0.0",
+    "babel-preset-react-app": "^3.1.1",
+    "browser-sync": "^2.23.6",
+    "browserify": "^16.1.0",
+    "eslint": "^4.18.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
+    "jest": "^22.3.0",
+    "nodemon": "^1.15.0",
+    "npm-run-all": "^4.1.2",
+    "onchange": "^3.3.0",
+    "poi": "^9.6.13",
+    "poi-preset-react": "^9.2.1",
+    "postcss-cli": "^5.0.0",
+    "rimraf": "^2.6.2",
+    "watchify": "^3.10.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "connect-history-api-fallback": "^1.5.0",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "prop-types": "^15.6.0"
   }
 }
