--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "2.0.0",
   "description": "Default Project",
   "main": "index.js",
+  "engines": {
+    "node": ">=8"
+  },
+  "author": "Alex Bonine <lemurdev@gmail.com>",
+  "license": "MIT",
+  "repository": "https://github.com/alexbonine/defaultproject.git",
   "scripts": {
     "api": "nodemon ./api/index.js",
     "clean": "rimraf dist/*",
