--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
   "plugins": ["react"],
   "extends": "airbnb",
   "rules": {
-    jsx-quotes: ["warn", "prefer-single"],
-    "react/react-in-jsx-scope": "off"
+    "jsx-quotes": ["warn", "prefer-single"],
+    "react/react-in-jsx-scope": "off",
+    "space-before-function-paren": ["warn", "always"]
   }
 }
