--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "engines": {
     "node": ">=8"
   },
-  "author": "Alex Bonine <lemurdev@gmail.com>",
+  "author": "Alex Bonine",
   "license": "MIT",
   "repository": "https://github.com/alexbonine/defaultproject.git",
   "scripts": {
     "api": "nodemon ./api/index.js",
-    "clean": "rimraf dist/*",
+    "clean": "run-p plain:clean react:react",
     "dev": "nodemon ./dev/dev.js",
     "eslint": "run-p plain:eslint react:eslint",
+    "generate": "node ./scripts/generate.js",
     "plain": "run-p plain:watch plain:serve",
     "plain:api": "run-p plain api",
     "plain:build": "run-s clean plain:build:*",
@@ -35,8 +36,6 @@
     "test": "jest --colors",
     "test:watch": "npm run test -- --watch"
   },
-  "author": "Alex Bonine",
-  "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^8.0.0",
     "babel-core": "^6.26.0",
@@ -50,6 +49,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
+    "fs-extra": "^5.0.0",
     "jest": "^22.3.0",
     "nodemon": "^1.15.0",
     "npm-run-all": "^4.1.2",
